--- a/src/mdx/about.mdx
+++ b/src/mdx/about.mdx
@@ -1,17 +1,15 @@
-I created Next.js MDX Blog Starter when I decided to convert my own blog at [johnpolacek.com](http://johnpolacek.com/) to use Next.js and MDX. I've become a big fan of Next.js and pretty much use it for everything new I’m building on the web these days.
+## Bio
+Hi there! my name is David Munro. I'm 35 years old. A father of 4 and married to my beautiful bride Laura.
 
-## Next.js
+I am a fullstack developer by trade.
 
-I reach for Next.js because it scales to what I need it to do. It can build a simple static blog like this one, or a SaaS app with parameterized routing, serverless backend, user authentication and an integrated API (see my [Hello Next App](https://hellonextapp.com/) project for example).
+I'm on a journey to become a master in multiple disciplines. I'm in the process of becoming the best engineer that I can be.
+Secondly I'm striving to become the best disc golfer that I can be. Life is pretty busy with a full-time job and a family of 6, however,
+I'm determined to not be outworked in the things that I'm able to do. I have time to practice putting and am dedicated to put in the
+daily practice for mastery.
 
-## MDX
+I find writing a useful way to express my thoughts and to understand how to plan and live my life in a more intentional way.
+Thus the creation of this blog. It will be the medium I plan to use to document my thoughts and hope that any visitors that
+may stumble upon my rantings may enjoy or benefit from the time I've spent on it.
 
-MDX is a powerful tool for authoring content. It gives you everything that authoring your content in markdown does, but with the added superpower of being able to drop in React components at will. For a web developer blog, that’s obviously pretty appealing.
-
-## Theme UI
-
-[Theme UI](https://theme-ui.com/home/) gives you a base set of [UI components](https://theme-ui.com/components) that let me style and layout web components with ease. The [sx prop](https://theme-ui.com/sx-prop) is magic. No thinking about class names, the cascade or how my CSS is going to scale. Write your styles, then get minified, atomic classes and automatically generated [critical CSS](https://web.dev/extract-critical-css/) for your pages. Great for devs, and great for users.
-
-## Vercel
-
-[Vercel](https://vercel.com/) provides streamlined deployment and hosting via [CLI](https://vercel.com/docs/cli#getting-started). They are also the company behind Next.js.
+Please feel free to reach out to me personally if you want to talk about anything <a href="mailto:munrodj86@gmail.com">munrodj86@gmail.com</a>
