--- a/src/mdx/posts/journey-towards-mastery.mdx
+++ b/src/mdx/posts/journey-towards-mastery.mdx
@@ -2,12 +2,84 @@
 title: 'My Journey Towards Mastery'
 excerpt: 'Ideas and thoughts about mastery in any domain'
 date: '2021-08-09'
+draft: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus. Praesent elementum facilisis leo vel fringilla. Congue mauris rhoncus aenean vel. Egestas sed tempus urna et pharetra pharetra massa massa ultricies.
+I was inspired today by a poem I heard.
 
-Venenatis cras sed felis eget velit. Consectetur libero id faucibus nisl tincidunt. Gravida in fermentum et sollicitudin ac orci phasellus egestas tellus. Volutpat consequat mauris nunc congue nisi vitae. Id aliquet risus feugiat in ante metus dictum at tempor. Sed blandit libero volutpat sed cras. Sed odio morbi quis commodo odio aenean sed adipiscing. Velit euismod in pellentesque massa placerat. Mi bibendum neque egestas congue quisque egestas diam in arcu. Nisi lacus sed viverra tellus in. Nibh cras pulvinar mattis nunc sed. Luctus accumsan tortor posuere ac ut consequat semper viverra. Fringilla ut morbi tincidunt augue interdum velit euismod.
+<strong>Good Timber</strong>
 
-## Lorem Ipsum
+```js
+The tree that never had to fight
+     For sun and sky and air and light,
+But stood out in the open plain
+     And always got its share of rain,
+Never became a forest king
+     But lived and died a scrubby thing.
 
-Tristique senectus et netus et malesuada fames ac turpis. Ridiculous mus mauris vitae ultricies leo integer malesuada nunc vel. In mollis nunc sed id semper. Egestas tellus rutrum tellus pellentesque. Phasellus vestibulum lorem sed risus ultricies tristique nulla. Quis blandit turpis cursus in hac habitasse platea dictumst quisque. Eros donec ac odio tempor orci dapibus ultrices. Aliquam sem et tortor consequat id porta nibh. Adipiscing elit duis tristique sollicitudin nibh sit amet commodo nulla. Diam vulputate ut pharetra sit amet. Ut tellus elementum sagittis vitae et leo. Arcu non odio euismod lacinia at quis risus sed vulputate.
+The man who never had to toil
+     To gain and farm his patch of soil,
+Who never had to win his share
+     Of sun and sky and light and air,
+Never became a manly man
+     But lived and died as he began.
+
+Good timber does not grow with ease,
+     The stronger wind, the stronger trees,
+The further sky, the greater length,
+     The more the storm, the more the strength.
+By sun and cold, by rain and snow,
+     In trees and men good timbers grow.
+
+Where thickest lies the forest growth
+     We find the patriarchs of both.
+And they hold counsel with the stars
+     Whose broken branches show the scars
+Of many winds and much of strife.
+     This is the common law of life.
+```
+- [Poem - Printed](https://www.familyfriendpoems.com/poem/good-timber-by-douglas-malloch)
+- [Poem - Audio](https://www.youtube.com/watch?v=FULKazaoyI0)
+
+The poem is all about toughness, grit, and seeing a hard life as a life that stands above others.
+
+This got me thinking about mastery and my current stage of mastery with the things that I have intentionally strived towards.
+There are two things that I'm pursing mastery in.
+
+The first being my career. I'm a software engineer, and over the last 3 years or so I've been obsessed at learning and getting better at
+developing software. The second is disc golf. My time is quite limited and not always in my control due to parenting and husband-ing things.
+Because of this I'm constantly trying to optimize the way I practice to fit within my schedule. I play leagues every Monday and have committed
+myself to being the most practiced putter who plays in the league.
+
+Pursing mastery in these two disciplines I've recognized there are common traits that apply to becoming better
+in these two and probably any disciple and I'd like to share what I've learned.
+
+The traits are:
+- Consistency
+- Intentional Training
+- Curiosity
+- Studying
+- Mental Fortitude
+
+## 1. Consistency
+In order to master anything, weather it's disc golf, becoming a better engineer or anything for that matter it
+requires hard work. While some people have a latent (natural) ability towards a discipline over others that can
+take them far, however, to fully master anything requires consistent practice. You must put in the time to become better.
+For example, if I want to become better at putting, I need to practice everyday to build both the muscles and muscle memory.
+
+## 2. Intentional Training
+
+## 3. Curiosity
+
+## 4. Studying
+In order to master anything it requires study. Study of yourself as well as others. For instance I've been studying
+how professional disc golfers putt. I have trouble making long putts outside the putting circle (~33 feet). Specifically I have
+trouble generating power to get the disc to the basket. So I began watching videos to understand what mechanics are the professionals
+doing that I wasn't. After finding someone I wanted to emulate I began practicing everyday to transform my form.
+
+The same principal of studying applies to my mastery of software engineering. I read others code as well as read software
+articles in order to improve the way I organize and communicate code.
+
+Mastery trait #4 (Studying) is a main block in the pyramid and leads us towards becoming the best we can be.
+
+## 5. Mental Fortitude
